Fix: CSS. Content div can have overflow:auto now, fixing broken image
Since the move to multiple stylesheets, it is now possible to style
the homepage separately. The overflow visible was only there to all
the homepage robot image to break out of the div, which is now
done in home.css, not main.css. overflow:auto wins!

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,7 @@
 div.content {
 	padding:0;
 	border-top:none;
+	overflow:visible;
 }
 
 div.content p {
